<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_dark_gray"
    android:padding="1dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@color/color_white" >

        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="10"
	        android:orientation="horizontal" >
	        
            <LinearLayout
                android:id="@+id/linearlayoutIntradayStart"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	            
                <TextView
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="2"
	                android:textColor="@color/color_gray"
	                android:singleLine="true"
	                android:gravity="center"
	                android:text="@string/start_time"
	                android:textSize="@dimen/font_size_6" />
                
                <TextView
	                android:id="@+id/textviewIntradayStart"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="4"
	                android:textColor="@color/color_pink"
	                android:singleLine="true"
	                android:gravity="center"
	                android:text="7:30"
	                android:textSize="@dimen/font_size_2" />
	            
	        </LinearLayout>

            <LinearLayout
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/color_inactive_gray"
	            android:layout_marginTop="@dimen/padding_tiny"
	            android:layout_marginBottom="@dimen/padding_tiny" >
	        </LinearLayout>
	        
	        <LinearLayout
	            android:id="@+id/linearlayoutIntradayTemp"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	            
                <TextView
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="2"
	                android:textColor="@color/color_gray"
	                android:singleLine="true"
	                android:gravity="center"
	                android:text="@string/targeted_temperature"
	                android:textSize="@dimen/font_size_6" />
                
                <TextView
	                android:id="@+id/textviewIntradayTemp"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="4"
	                android:textColor="@color/color_pink"
	                android:singleLine="true"
	                android:gravity="center"
	                android:text="21-23°C"
	                android:textSize="@dimen/font_size_2" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/color_inactive_gray"
	            android:layout_marginTop="@dimen/padding_tiny"
	            android:layout_marginBottom="@dimen/padding_tiny" >
	        </LinearLayout>
	        
	        <LinearLayout
	            android:id="@+id/linearlayoutIntradayEnd"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	            
                <TextView
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="2"
	                android:textColor="@color/color_gray"
	                android:singleLine="true"
	                android:gravity="center"
	                android:text="@string/end_time"
	                android:textSize="@dimen/font_size_6" />
                
                <TextView
	                android:id="@+id/textviewIntradayEnd"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="4"
	                android:textColor="@color/color_pink"
	                android:singleLine="true"
	                android:gravity="center"
	                android:text="11:30"
	                android:textSize="@dimen/font_size_2" />
	            
	        </LinearLayout>
	        
	    </LinearLayout>
	    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_inactive_gray" >
        </LinearLayout>
	
	    <HorizontalScrollView 
	        android:id="@+id/scrollviewTimeTemp"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="30"
	        android:background="@color/color_white" >
	        
	        <RelativeLayout
	            android:layout_width="@dimen/intraday_timeline_width"
	        	android:layout_height="match_parent" >
                
	            <LinearLayout
	                android:id="@+id/layoutIntradayGraph"
	                android:layout_width="@dimen/intraday_timeline_width"
	        		android:layout_height="match_parent"
	        		android:orientation="vertical"
	        		android:padding="@dimen/padding_small" >
	        		
	                <LinearLayout
	                    android:layout_width="match_parent"
	                    android:layout_height="0dp"
	        			android:layout_weight="10"
	        			android:orientation="horizontal" >	                    
	                </LinearLayout>
	                
	                <LinearLayout
	                    android:id="@+id/layoutIntradayTimeBar"
	                    android:layout_width="match_parent"
	                    android:layout_height="0dp"
	        			android:layout_weight="15"
	        			android:orientation="horizontal" >
	        			
	                    <com.aikos.aikoslibrary.view.ProgramADayView
			                android:id="@+id/progADayView"
				            android:layout_width="match_parent"
				            android:layout_height="match_parent" />
	                    
	                </LinearLayout>
	                
	                <LinearLayout
	                    android:id="@+id/layoutIntradayRuler"
	                    android:layout_width="match_parent"
	                    android:layout_height="0dp"
	        			android:layout_weight="10"
	        			android:orientation="horizontal" >
	                    
	                    <com.aikos.aikoslibrary.view.IntradayRuler
			                android:id="@+id/progADayRuler"
				            android:layout_width="match_parent"
				            android:layout_height="match_parent" />
	                    	                    
	                </LinearLayout>
	                
	            </LinearLayout>
	            
	            <LinearLayout
	                android:id="@+id/layoutIntradaySlider"
	                android:layout_width="@dimen/intraday_timeline_width"
	        		android:layout_height="match_parent"
	        		android:orientation="vertical"
	        		android:padding="@dimen/padding_small"
	        		android:visibility="gone" >
	                
	                <LinearLayout
	                    android:layout_width="match_parent"
	                    android:layout_height="0dp"
	        			android:layout_weight="10"
	        			android:orientation="horizontal" >
	                    
	                </LinearLayout>
	                
	                <LinearLayout	                    
	                    android:layout_width="match_parent"
	                    android:layout_height="0dp"
	        			android:layout_weight="18"
	        			android:orientation="horizontal" >
	        			
	                    <com.aikos.aikoslibrary.view.SliderView
		                    android:id="@+id/slider"
		                    android:layout_width="match_parent"
		                    android:layout_height="match_parent"
		                    android:layout_gravity="center_horizontal"
		                    android:adjustViewBounds="true"/>
	                    
	                </LinearLayout>
	                
	                <LinearLayout
	                    android:layout_width="match_parent"
	                    android:layout_height="0dp"
	        			android:layout_weight="10"
	        			android:orientation="horizontal" >
	                    	                    
	                </LinearLayout>
	                
	            </LinearLayout>
	            
	        </RelativeLayout>

	        
	    </HorizontalScrollView>
	    
	    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_inactive_gray" >
        </LinearLayout>
	
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="10"
	        android:orientation="horizontal"
	        android:background="@color/color_white" >
	        
	        
	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="45"
	            android:gravity="left|center_vertical"
	            android:layout_marginLeft="@dimen/padding_normal"
	            android:orientation="horizontal" >
	            
	            
	            
	        </LinearLayout>
	        
	
	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="10" >
	            
	            <TextView
	                android:id="@+id/textviewIntradayCancel"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:padding="@dimen/padding_tiny"
	                android:textColor="@color/color_pink"
	                android:singleLine="true"
	                android:gravity="center"
	                android:text="@string/text_Cancel"
	                android:textSize="@dimen/font_size_3" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/color_inactive_gray"
	            android:layout_marginTop="@dimen/padding_tiny"
	            android:layout_marginBottom="@dimen/padding_tiny" >
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="15" >
	            
	            <TextView
	                android:id="@+id/textviewIntradaySave"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:padding="@dimen/padding_tiny"
	                android:textColor="@color/color_pink"
	                android:singleLine="true"
	                android:gravity="center"
	                android:text="@string/text_Save"
	                android:textSize="@dimen/font_size_3" />
	            
	        </LinearLayout>
	        
	    </LinearLayout>
    
    </LinearLayout>

    
    
</LinearLayout>
